[package]
name = "ghee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.9"
chrono = { version = "0.4", features = ["unstable-locales"] }
libbtrfsutil = "0.5.0"
tabled = "0.8.0"
regex = "1"
